--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
 
-<--ぴーまん作のサイト-->
-<--ぴーまん作のサイト-->
-<--ぴーまん作のサイト-->
-  <--ぴーまん作のサイト-->
-  <--ぴーまん作のサイト-->
-  <--ぴーまん作のサイト--><TITLE>ぴぃまんのホームページ★</TITLE>
+<TITLE>たぬき(てぬき)うどんのホームページ★</TITLE>
 <body style="background-image:url(https://cdn.discordapp.com/avatars/988975237527912448/d54cebddf5917f939fdd9d116f574659.webp);">
   <big><h2 style="text-align:center"><font color="#BBFFFF"><B>おらの鯖に入れ</B></font></h2></big>
   
-  	<a href="https://discord.gg/PZDkpJExFE" target="align">はい。</a>
+  	<a href="https://discord.gg/PZDkpJExFE" target="center">はい、わかりました。</a>
   
   
   
@@ -22,27 +17,5 @@
   
   
   
-<--ぴーまん作のサイト-->
-<--ぴーまん作のサイト-->
-<--ぴーまん作のサイト-->
-  <--ぴーまん作のサイト-->
-  <--ぴーまん作のサイト-->
-  <--ぴーまん作のサイト-->
-<--ぴーまん作のサイト-->
-<--ぴーまん作のサイト-->
-<--ぴーまん作のサイト-->
-  <--ぴーまん作のサイト-->
-  <--ぴーまん作のサイト-->
-  <--ぴーまん作のサイト-->
-<--ぴーまん作のサイト-->
-<--ぴーまん作のサイト-->
-<--ぴーまん作のサイト-->
-  <--ぴーまん作のサイト-->
-  <--ぴーまん作のサイト-->
-  <--ぴーまん作のサイト-->
-<--ぴーまん作のサイト-->
-<--ぴーまん作のサイト-->
-<--ぴーまん作のサイト-->
-  <--ぴーまん作のサイト-->
-  <--ぴーまん作のサイト-->
-  <--ぴーまん作のサイト-->
+
+#  <--ぴーまん作のサイト-->
