--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body style="background-image:url(https://cdn.discordapp.com/avatars/988975237527912448/d54cebddf5917f939fdd9d116f574659.webp);">
   <big><h2 style="text-align:center"><font color="#BBFFFF"><B>おらの鯖に入れ</B></font></h2></big>
   
-  	<a href="https://discord.gg/PZDkpJExFE" target="center">はい、わかりました。</a>
+  	<big><a href="https://discord.gg/PZDkpJExFE" target="center">はい、わかりました。</a><big>
   
   
   
